[package]
name = "rust_ex"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "debug"
path = "src/debug.rs"
test = false
bench = false

[dependencies]
async-trait = "0.1.57"
base64 = "0.13.0"
reqwest = "0.11.11"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
