[package]
name = "opentau"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"
test = false
bench = false


[[bin]]
name = "debug"
path = "src/debug.rs"
test = false
bench = false

[dependencies]
async-trait = "0.1.57"
base64 = "0.13.0"
clap = { version = "3.2.22", features = ["derive"] }
dashmap = "5.4.0"
governor = "0.5.0"
rand = "0.8.5"
redis = "0.21.6"
reqwest = "0.11.11"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1", features = ["full"] }
