[package]
name = "evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentau = { path = "../client" }
serde = "1.0.159"
serde_json = "1.0.95"
tokio = { version = "1.21.2", features = ["full"] }
